@@ -191,6 +191,7 @@ namespace fim
 		 * looks for a binding to 'cmd' and returns a string description for its bound key 
 		 */
 		bindings_t::const_iterator bi;
+		aliases_t::const_iterator ai;
 		fim_key_t key=FIM_SYM_NULL_KEY;
 
 		for( bi=bindings_.begin();bi!=bindings_.end();++bi)
@@ -199,6 +200,14 @@ namespace fim
 			if(bi->second==binding)
 			{
 				key = bi->first;	
+				goto ret;
+			}
+		}
+		for( ai=aliases_.begin();ai!=aliases_.end();++ai)
+		{
+			if(ai->second.first==binding)
+			{
+				key = ai->first;	
 				goto ret;
 			}
 		}
@@ -459,7 +468,7 @@ ret:		return key;
 #endif /* FIM_WANT_PIC_LBFL */
 		addCommand(new Command(fim_cmd_id(FIM_FLT_LIST),fim::string(FIM_CMD_HELP_LIST),&browser_,&Browser::fcmd_list));
 		addCommand(new Command(fim_cmd_id(FIM_FLT_LOAD),fim::string(FIM_FLT_LOAD" : load the image, if not yet loaded (see also " FIM_FLT_RELOAD ")"),&browser_,&Browser::fcmd_load));
-		addCommand(new Command(fim_cmd_id(FIM_FLT_PAN),fim::string( FIM_FLT_PAN" {'down'|'up'|'left'|'right'|'ne'|'nw'|'se'|'sw'} [{steps}['%']] pan the image {steps} pixels in the desired direction;" " if the '%' specifier is present, {steps} will be treated as a percentage of current screen dimensions;" " if {steps} is not specified, the \"" FIM_VID_STEPS "\" variable will be used;" " if present, the \"" FIM_VID_HSTEPS "\" variable will be considered for horizontal panning;" " if present, the \"" FIM_VID_VSTEPS "\" variable will be considered for vertical panning;" " the variables may be terminated by the \'%\' specifier" " "),&browser_,&Browser::pan));
+		addCommand(new Command(fim_cmd_id(FIM_FLT_PAN),fim::string( FIM_FLT_PAN" {'down'|'up'|'left'|'right'|'ne'|'nw'|'se'|'sw'}[+-] [{steps}['%']] pan the image {steps} pixels in the desired direction;" " if the '%' specifier is present, {steps} will be treated as a percentage of current screen dimensions;" " if {steps} is not specified, the \"" FIM_VID_STEPS "\" variable will be used;" " if present, the \"" FIM_VID_HSTEPS "\" variable will be considered for horizontal panning;" "a + or - sign at the end of the first argument will make jump to next or prev if border is reached;" " if present, the \"" FIM_VID_VSTEPS "\" variable will be considered for vertical panning;" " the variables may be terminated by the \'%\' specifier" " "),&browser_,&Browser::pan));
 		addCommand(new Command(fim_cmd_id(FIM_FLT_POPEN),fim::string(FIM_FLT_POPEN " " FIM_CNS_EX_SYSC_STRING " : pipe a command, invoking popen(): spawns a shell, invoking " FIM_CNS_EX_SYSC_STRING " and executing as fim commands the output of " FIM_CNS_EX_SYSC_STRING),this,&CommandConsole::fcmd_sys_popen));
 #ifdef FIM_PIPE_IMAGE_READ
 		addCommand(new Command(fim_cmd_id(FIM_FLT_PREAD),fim::string(FIM_FLT_PREAD " " FIM_CNS_EX_ARGS_STRING " : execute " FIM_CNS_EX_ARGS_STRING " as a shell command and read the output as an image file (using " FIM_FLT_POPEN ")"),this,&CommandConsole::fcmd_pread));
