@@ -657,14 +657,17 @@ int fim_dump_man_page(void)
 			//FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLC_FLIP);
 			FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLC_PAN_LEFT);
 			FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLC_PAN_RIGHT);
-			FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLC_PAN_UP);
-			FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLC_PAN_DOWN);
+			FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLC_SCROLL_UP);
+			FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLC_SCROLL_DOWN);
+			//FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLC_PAN_UP);
+			//FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLC_PAN_DOWN);
 			FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLT_ROTATE);
 			FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLT_LIST);
 			FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLT_SCROLLDOWN);
 			FIM_ADD_DOCLINE_FOR_CMD(1,FIM_FLT_QUIT);
 			mp+="You can type a number before a command binding to iterate the assigned command:\n";
-			FIM_ADD_DOCLINE_FOR_CMD(3,FIM_FLC_PAN_UP);
+			//FIM_ADD_DOCLINE_FOR_CMD(3,FIM_FLC_PAN_UP);
+			FIM_ADD_DOCLINE_FOR_CMD(3,FIM_FLC_SCROLL_UP);
 			mp+=string(
 //"d,x,D,X		diagonal scroll\n"
 //"C-w			scale to the screen width\n"
