@@ -107,12 +107,14 @@ bind 'u'   "list 'unmark'";
 bind 'Enter' "list 'mark';goto _lastgotodirection";
 bind '-' "reduce";
 bind "Up" "pan_up";
-bind 'k' "pan_up";
+###bind 'k' "pan_up";
+bind 'k' "pan 'up-'";
 ####bind 'C-k' "pan_up";
 bind "Right" "pan_right";
 bind 'l' "pan_right";
 bind "Down" "pan_down";
-bind 'j' "pan_down";
+###bind 'j' "pan_down";
+bind 'j' "pan 'down+'";
 bind "Left" "pan_left";
 bind 'h' "pan_left";
 ####bind ' ' "scrolldown";
